--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsnd src/index.ts"
   },
   "keywords": [],
-  "author": "Thais Kotovicz <thais_kotovicz@gmail.com>",
+  "author": "Thais Kotovicz <thais_kotovicz@hotmail.com>",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.7.0",
     "md5": "^2.3.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
