--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -17,8 +17,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.7.0",
     "md5": "^2.3.0",
-    "mongoose": "^6.8.3",
-    "zod": "^3.20.2"
+    "mongoose": "^6.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
