--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -15,13 +15,18 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/md5": "^2.3.2",
     "@types/node": "^18.11.18",
     "eslint-config-standard-with-typescript": "^26.0.0",
     "ts-node": "^10.9.1",
