--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend do desafio técnico da SharEnergy com Express, MongoDB, Mongoose e Typescript",
+  "main": "src/index.js",
   "scripts": {
     "dev": "tsnd src/index.ts"
   },
@@ -20,14 +20,19 @@
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "mongoose": "^6.8.3",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/md5": "^2.3.2",
     "@types/node": "^18.11.18",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "eslint-config-standard-with-typescript": "^26.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
